# CHAT_BOT_BACKEND

./: README.md  main.ipynb  pyproject.toml
app/: backend.py  run.txt
app/config/: config_loader.py  dev.env  dev.env.example
app/emdeddings/: embedding_model.py
app/model/: chat_model.py
app/preprocessing/: pdf_preprocessor.py
app/schema/: request.py  response.py
app/utils/: utility.py
app/vectorstore/: pinecone_db.py
